# logros_pragma

col_pragma_logro_pgm_extraer_tabla_dynamodb/: .gitignore  MANIFEST.in  README.md  col_pragma_logro_pgm_extraer_tabla_dynamodb.py  project.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
col_pragma_logro_pgm_extraer_tabla_dynamodb/addons/config/: constants.py  job_config.py  local_env.py  spark_config.py
col_pragma_logro_pgm_extraer_tabla_dynamodb/addons/config/schemas/: col_pragma_tabla_final.schema.yml
col_pragma_logro_pgm_extraer_tabla_dynamodb/addons/pyspark_utils/: align_shema.py  cast_to_timestamp.py  catalog.py  flatten_dynamodb_struct.py  hudi_options.py  pre_extract_sources.py  schema_parser.py  sources.py  table.py  tables.py
col_pragma_logro_pgm_extraer_tabla_dynamodb/config/: report_config.py  report_config_path.py  sources_dictionary.py
col_pragma_logro_pgm_extraer_tabla_dynamodb/config/reports/: nombre_tabla.yml
col_pragma_logro_pgm_extraer_tabla_dynamodb/etl/extract/: get_sources_options.py  sources.py
col_pragma_logro_pgm_extraer_tabla_dynamodb/etl/load/: metadata.py  save.py
col_pragma_logro_pgm_extraer_tabla_dynamodb/etl/transform/: raw_transformations.py  transformations.py
col_pragma_logro_pgm_extraer_tabla_dynamodb/tests/: test_addons_pyspark_utils_catalog.py  test_main_full.py  test_main_incremental.py  test_srf_curado_ingesta_tarjeta_full.py  test_srf_curado_ingesta_tarjeta_incremental.py
col_pragma_logro_pgm_extraer_tabla_dynamodb/tests/mocks/: glue_mock.py
