[metadata]

name = extraer_tabla_dynamodb
version = 0.0.1
author = Esteban Salazar Montoya & Oscar Vergara Florez
#url = https://godatadriven.com/blog/a-practical-guide-to-setuptools-and-pyproject-toml 
description = logro Pragma extraer_tabla_dynamodb
long_description = file: README.md
long_description_content_type = text/markdown
keywords = DataPlaform
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]

package_dir =
    col_pragma_logro_pgm_extraer_tabla_dynamodb = col_pragma_logro_pgm_extraer_tabla_dynamodb
    addons = addons

py_module = col_pragma_logro_pgm_extraer_tabla_dynamodb
python_requires = >=3.10

[tool:pytest]
python_classes = Test Describe
python_files = test_*.py
python_functions = test_ it_ they_ but_ and_it_
testpaths =
    tests